feat : Added new screens in mobile

--- a/backend/api/.env
+++ b/backend/api/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection
-MONGO_URI=mongodb://localhost:27017/disaster-response
+MONGO_URI=mongodb+srv://workfromhome02298:Lockdown12345@heisenbergcluster.mmlmd.mongodb.net/Sahyog
 
 # JWT Configuration
 JWT_SECRET=TEAMSYNAPSE
