--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "backend for disaster management app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -17,6 +18,7 @@
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "mongoose": "^8.12.2",
+    "morgan": "^1.10.0",
     "pg": "^8.14.1",
     "sequelize": "^6.37.6",
     "winston": "^3.17.0"
