--- a/frontend/mobile/package.json
+++ b/frontend/mobile/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.2",
     "axios": "^1.8.4",
     "expo": "~52.0.40",
@@ -28,7 +29,9 @@
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
